Bug: fixed styling of mobile menu buttons on Safari (#435)

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/components/_header.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/components/_header.scss
@@ -87,6 +87,13 @@ $menu-item-margin: 0.625em;
 
 .main-menu {
     background-color: $dark-gray;
+
+    .navbar .close-menu button,
+    .navbar .close-button button {
+        background-color: transparent;
+        border: 0;
+        -webkit-appearance: none;
+    }
 }
 
 .header-banner {
